--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/bt_adv"
+        android:id="@+id/bt_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="广告图片"
+        android:text="同步广告"
         app:layout_constraintBottom_toTopOf="@id/bt_avi"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -19,10 +19,10 @@
         android:id="@+id/bt_avi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="广告视屏"
+        android:text="启动广告"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bt_adv" />
+        app:layout_constraintTop_toBottomOf="@id/bt_update" />
 
 </android.support.constraint.ConstraintLayout>
